// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LAN/> Snapshot managed with enabled DHCP. 1`] = `
<form>
  <h3>
    LAN Settings
  </h3>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="74"
    >
      LAN mode
    </label>
    <div
      class="col-sm-8"
    >
      <select
        class="form-control"
        id="74"
      >
        <option
          value="managed"
        >
          Router
        </option>
        <option
          value="unmanaged"
        >
          Computer
        </option>
      </select>
      <small
        class="form-text text-muted"
      >
        
Router mode means that this devices manages the LAN (acts as a router, can assing IP addresses, ...).
Computer mode means that this device acts as a client in this network. It acts in a similar way as WAN, but
it has opened ports for configuration interface and other services.
        
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="90"
    >
      Router IP address
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="90"
          required=""
          type="text"
          value="192.168.1.4"
        />
      </div>
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      >
        Router's IP address in the inner network.
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="91"
    >
      Network mask
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="91"
          required=""
          type="text"
          value="255.255.255.0"
        />
      </div>
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <div
    class="form-group row"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="92"
      >
        Enable DHCP
      </label>
    </div>
    <div
      class="form-check col-sm-8"
    >
      <input
        id="92"
        type="checkbox"
      />
      <small
        class="form-text text-muted"
      >
        Enable this option to automatically assign IP addresses to the devices connected to the router.
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="97"
    >
      DHCP start
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="97"
          min="1"
          required=""
          type="number"
          value="123123"
        />
      </div>
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="98"
    >
      DHCP max leases
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="98"
          min="1"
          required=""
          type="number"
          value="150"
        />
      </div>
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="99"
    >
      Lease time (hours)
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="99"
          min="120"
          required=""
          type="number"
          value="43200"
        />
      </div>
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <button
    class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
  >
     
     
    Save
  </button>
</form>
`;

exports[`<LAN/> Snapshot managed. 1`] = `
<form>
  <h3>
    LAN Settings
  </h3>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="55"
    >
      LAN mode
    </label>
    <div
      class="col-sm-8"
    >
      <select
        class="form-control"
        id="55"
      >
        <option
          value="managed"
        >
          Router
        </option>
        <option
          value="unmanaged"
        >
          Computer
        </option>
      </select>
      <small
        class="form-text text-muted"
      >
        
Router mode means that this devices manages the LAN (acts as a router, can assing IP addresses, ...).
Computer mode means that this device acts as a client in this network. It acts in a similar way as WAN, but
it has opened ports for configuration interface and other services.
        
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="71"
    >
      Router IP address
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="71"
          required=""
          type="text"
          value="192.168.1.4"
        />
      </div>
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      >
        Router's IP address in the inner network.
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="72"
    >
      Network mask
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="72"
          required=""
          type="text"
          value="255.255.255.0"
        />
      </div>
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <div
    class="form-group row"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="73"
      >
        Enable DHCP
      </label>
    </div>
    <div
      class="form-check col-sm-8"
    >
      <input
        id="73"
        type="checkbox"
      />
      <small
        class="form-text text-muted"
      >
        Enable this option to automatically assign IP addresses to the devices connected to the router.
      </small>
    </div>
  </div>
  <button
    class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
  >
     
     
    Save
  </button>
</form>
`;

exports[`<LAN/> Snapshot unmanaged (dhcp). 1`] = `
<form>
  <h3>
    LAN Settings
  </h3>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="1"
    >
      LAN mode
    </label>
    <div
      class="col-sm-8"
    >
      <select
        class="form-control"
        id="1"
      >
        <option
          value="managed"
        >
          Router
        </option>
        <option
          value="unmanaged"
        >
          Computer
        </option>
      </select>
      <small
        class="form-text text-muted"
      >
        
Router mode means that this devices manages the LAN (acts as a router, can assing IP addresses, ...).
Computer mode means that this device acts as a client in this network. It acts in a similar way as WAN, but
it has opened ports for configuration interface and other services.
        
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="2"
    >
      IPv4 protocol
    </label>
    <div
      class="col-sm-8"
    >
      <select
        class="form-control"
        id="2"
      >
        <option
          value="dhcp"
        >
          DHCP (automatic configuration)
        </option>
        <option
          value="static"
        >
          Static IP address (manual configuration)
        </option>
        <option
          value="none"
        >
          Don't connect this device to LAN
        </option>
      </select>
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="3"
    >
      DHCP hostname
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="3"
          type="text"
          value=""
        />
      </div>
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      >
        Hostname which will be provided to DHCP server.
      </small>
    </div>
  </div>
  <button
    class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
  >
     
     
    Save
  </button>
</form>
`;

exports[`<LAN/> Snapshot unmanaged none. 1`] = `
<form>
  <h3>
    LAN Settings
  </h3>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="38"
    >
      LAN mode
    </label>
    <div
      class="col-sm-8"
    >
      <select
        class="form-control"
        id="38"
      >
        <option
          value="managed"
        >
          Router
        </option>
        <option
          value="unmanaged"
        >
          Computer
        </option>
      </select>
      <small
        class="form-text text-muted"
      >
        
Router mode means that this devices manages the LAN (acts as a router, can assing IP addresses, ...).
Computer mode means that this device acts as a client in this network. It acts in a similar way as WAN, but
it has opened ports for configuration interface and other services.
        
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="39"
    >
      IPv4 protocol
    </label>
    <div
      class="col-sm-8"
    >
      <select
        class="form-control"
        id="39"
      >
        <option
          value="dhcp"
        >
          DHCP (automatic configuration)
        </option>
        <option
          value="static"
        >
          Static IP address (manual configuration)
        </option>
        <option
          value="none"
        >
          Don't connect this device to LAN
        </option>
      </select>
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <button
    class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
  >
     
     
    Save
  </button>
</form>
`;

exports[`<LAN/> Snapshot unmanaged static. 1`] = `
<form>
  <h3>
    LAN Settings
  </h3>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="16"
    >
      LAN mode
    </label>
    <div
      class="col-sm-8"
    >
      <select
        class="form-control"
        id="16"
      >
        <option
          value="managed"
        >
          Router
        </option>
        <option
          value="unmanaged"
        >
          Computer
        </option>
      </select>
      <small
        class="form-text text-muted"
      >
        
Router mode means that this devices manages the LAN (acts as a router, can assing IP addresses, ...).
Computer mode means that this device acts as a client in this network. It acts in a similar way as WAN, but
it has opened ports for configuration interface and other services.
        
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="17"
    >
      IPv4 protocol
    </label>
    <div
      class="col-sm-8"
    >
      <select
        class="form-control"
        id="17"
      >
        <option
          value="dhcp"
        >
          DHCP (automatic configuration)
        </option>
        <option
          value="static"
        >
          Static IP address (manual configuration)
        </option>
        <option
          value="none"
        >
          Don't connect this device to LAN
        </option>
      </select>
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="33"
    >
      IP address
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="33"
          required=""
          type="text"
          value="192.168.1.4"
        />
      </div>
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="34"
    >
      Network mask
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="34"
          required=""
          type="text"
          value="255.255.255.0"
        />
      </div>
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="35"
    >
      Gateway
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="35"
          required=""
          type="text"
          value="192.168.1.4"
        />
      </div>
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="36"
    >
      DNS server 1
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="36"
          type="text"
          value=""
        />
      </div>
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      >
        DNS server address is not required as the built-in DNS resolver is capable of working without it.
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="37"
    >
      DNS server 2
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="37"
          type="text"
          value=""
        />
      </div>
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      >
        DNS server address is not required as the built-in DNS resolver is capable of working without it.
      </small>
    </div>
  </div>
  <button
    class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
  >
     
     
    Save
  </button>
</form>
`;
